--- a/index.css
+++ b/index.css
@@ -37,6 +37,12 @@ h2 {
 h2 {
     color: pink;
 }
+.aboutme {
+    margin: 50;
+    padding: 40px;
+    width: auto;
+    border: 5px dashed rgba(201, 167, 153, 0.523); 
+}
 .section1 {
     margin: 50;
     padding: 40px;
